<resources>
    <string name="app_name">Turathi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="lingos_fragment_label">Our Languages</string>
    <string name="categories_fragment_label">Our Categories</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="game_fragment_label">Game</string>

    <string name="next">Go to the Second Page</string>
    <string name="text">testing string</string>
    <string name="previous">Go To the First Fragment</string>

    <string name="lingo1">Somali</string>
    <string name="lingo2">Kikuyu</string>
    <string name="lingo3">Dholuo</string>

    <string name="category1">Foods</string>
    <string name="category2">Greetings</string>
    <string name="category3">Occupations</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_profile">Profile</string>
    <string name="action_scoreboard">Scoreboard</string>
    <string name="splash_text">Turathi</string>
</resources>