<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.splashscreen.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">



<!--        first fragment to lingos fragment-->
        <action
            android:id="@+id/action_FirstFragment_to_LingosFragment"
            app:destination="@id/LingosFragment" />

<!--        FIRST FRAGMENT TO CATEGORIES-->

        <action
            android:id="@+id/action_FirstFragment_to_CategoriesFragment"
            app:destination="@id/CategoriesFragment" />

        <!--        FIRST FRAGMENT TO second fragment-->
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <!--        first fragment to lingos fragment-->
        <action
            android:id="@+id/action_FirstFragment_to_PangramFragment"
            app:destination="@id/PangramFragment" />



    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.splashscreen.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.splashscreen.ThirdFragment"
        android:label="Third Fragment"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>



    <fragment
        android:id="@+id/LingosFragment"
        android:name="com.example.splashscreen.LingosFragment"
        android:label="@string/lingos_fragment_label"
        tools:layout="@layout/fragment_lingos">

<!--        lingos to categories-->
        <action
            android:id="@+id/action_LingosFragment_to_CategoriesFragment"
            app:destination="@id/CategoriesFragment" />

        <!--        somali button to third-->
        <action
            android:id="@+id/action_LingosFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />


    </fragment>


    <fragment
        android:id="@+id/CategoriesFragment"
        android:name="com.example.splashscreen.CategoriesFragment"
        android:label="@string/categories_fragment_label"
        tools:layout="@layout/fragment_categories">

        <!--    categories back to lingos-->
        <action
            android:id="@+id/action_CategoriesFragment_to_LingosFragment"
            app:destination="@id/LingosFragment" />

        <!--    categories to game (testing with buttonFoods)-->
        <action
            android:id="@+id/action_CategoriesFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
    </fragment>

<!--    GAMES FRAGMENT-->

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.example.splashscreen.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">


    </fragment>
    <fragment
        android:id="@+id/PangramFragment"
        android:name="com.example.splashscreen.PangramFragment"
        android:label="PangramFragment"
        tools:layout="@layout/fragment_pangram"/>



</navigation>